# roxy-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  extensions_config.json  pyproject.toml  skills-lock.json
APP/: main.py
APP/api/: __init__.py  app.py  common.py  router.py
APP/dto/: __init__.py  chat.py  conversation.py  mcp.py  model.py  reminder.py
APP/plugins/: __init__.py  base.py  config_store.py  dto.py  manager.py  registry.py  roxy_realtime_tts.py
desktop/: dialog.html  package-lock.json  package.json  pet.html  tsconfig.json  vite.config.ts
docs/: RAG混合检索与重排改造-2026-05-08.md  README.md  roxy-gsv-local-tts.md  skills与上下文治理更新-2026-04-19.md  subagent改造说明-2026-04-28.md  实现总览.md  模块详解.md  运行与调试指南.md
frontend/: CLAUDE.md
harness/: client.py
scripts/: devctl.sh
tests/: test_agent_loop.py  test_api_conversations.py  test_api_router_structure.py  test_chat_service.py  test_client_mcp.py  test_client_project_root.py  test_conversation_store.py  test_dto_exports.py  test_harness_client_facade.py  test_local_browser.py  test_mcp_config.py  test_memory_prompt.py  test_memory_storage.py  test_memory_updater.py  test_playwright_browser_priority.py  test_plugin_manager.py  test_prompt_skills_section.py  test_rag_chunker.py  test_rag_retrieval.py  test_rag_store.py  test_reminders.py  test_roxy_realtime_tts_plugin.py  test_sandbox.py  test_service_delegation.py  test_session_context_store.py  test_skill_runtime.py  test_skills_loader.py  test_subagent_limit.py  test_thread_context_store.py  test_tools.py  test_tts_marker.py
(+102 files in other folders)
