[project]
name = "my-deer-flow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
	"openai>=1.99.9",
	"fastapi>=0.115.0",
	"uvicorn>=0.34.0",
	"python-dotenv>=1.0.0",
	"dataclasses>=0.8",
	"qdrant-client[fastembed]>=1.15.1",
	"langchain-mcp-adapters>=0.1.0",
	"mcp>=1.0.0",
]

[dependency-groups]
dev = [
	"pytest>=8.4.2",
	"pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = [".sandbox", "artifacts", "desktop/node_modules", "skills"]
